@@ -1,3 +1,7 @@
+2002-12-15  Wakaba  <w@suika.fam.cx>
+
+	* Formatter.pm (%char;): Removed.
+
 2002-12-05  Wakaba  <w@suika.fam.cx>
 
 	* Formatter.pm (%FMT2TXT): New (internal) initial format rule,
